# cacache-napi

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
quansync/: build.ts  deno.json  mod.ts
quansync/src/: clear.ts  copy.ts  exists.ts  list.ts  metadata.ts  read.ts  remove.ts  write.ts
src/: clear.rs  copy.rs  exists.rs  lib.rs  list.rs  metadata.rs  read.rs  remove.rs  write.rs
