[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-beta.7", default-features = false, features = [
  "napi3",
  "napi6",
  "async"
] }
napi-derive = "3.0.0-beta.6"
cacache = "13.1.0"
serde_json = "1.0.140"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
